feat: separate court endpoints to /admin/canchas/registrar and /admin/canchas/listar
